--- a/ExpressJSSample/views/index.ejs
+++ b/ExpressJSSample/views/index.ejs
@@ -1,23 +1,29 @@
 <html>
 	<head>
 		<title><%=title%></title>
+		<link rel='stylesheet' href='/stylesheets/style.css' />	
 	</head>
 	<body>
 		<h1><%=title%></h1>
 		<form action='/add' method='post'>
-			<div>
-				<label>Name:</label>
-				<input type="text" name="name" id="name"/><br/>
-			</div>
-			<div>
-				<label>Id:</label>
-				<input type="text" name="id"/>
-			</div>
-			<div>
-				<label>Designation:</label>
-				<input type="text" name="dese"/>
-			</div>
-			<div><input type="submit" value="Sign Up"/></div>
+		<div class="fieldset">
+		<fieldset border = "solid black thin" >
+			<legend><strong>Employee Details</strong></legend>
+			<p>
+				<label class="fieldset" >Name:</label>
+				<input type="text" name="name" id="name" size="20"/>
+			</p>
+			<p>
+				<label class="fieldset">Id:</label>
+				<input type="text" name="id"size="20"/>
+			</p>
+			<p>
+				<label class="fieldset" >Designation:</label>
+				<input type="text" name="dese" size="20"/>
+			</p>
+			<p><input type="submit" value="Add info"/></p>
+		</fieldset>
+		</div>
 		</form>
 	</body>
 </html>
