--- a/Week2_Assignment/client/style.css
+++ b/Week2_Assignment/client/style.css
@@ -38,7 +38,6 @@ table#studDetails th:last-child {
     color: darkgreen;
     background-color: cornsilk;
     cursor: pointer;
-    text-decoration: underline;
     font-size: 18px;
     border-color: bisque;
 /*     box-shadow: 0 3px 16px 0 rgba(0,0,0,0.4), 0 6px 20px 0 rgba(0,0,0,0.10) */
@@ -64,4 +63,11 @@ div .ui-widget-content{
 }
 div .ui-widget .ui-state-default{
 	background: brown;
+}
+input[type="button"]:disabled {
+    cursor: auto;
+}
+button a{
+	text-decoration: initial;
+	color: darkgreen;
 }
